Fixed map alignmnet

--- a/css/mediwhere.css
+++ b/css/mediwhere.css
@@ -11,5 +11,6 @@
 @media(min-width:768px) {
     .map {
         left: 250px;
+        width: calc(100% - 250px);
     }
 }
